--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -40,4 +40,9 @@
             android:layout_gravity="start"
             android:orientation="vertical" />
 
+    <com.alan.alansdk.button.AlanButton
+        android:id="@+id/alan_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </androidx.drawerlayout.widget.DrawerLayout>
